# NekoBeat

./: .gitignore  CONTRIBUTING.md  README.md  cookies.txt  index.html  package-lock.json  package.json
.github/workflows/: release.yml
.tauri/: nekobeat.key.pub
scripts/: build-release.ps1  build_gs.ps1  publish-update.ps1  stage_gstreamer.ps1
src/: App.css  App.css.bak  App.tsx  hooks.ts
src-tauri/: Cargo.toml  build.rs  build_log.txt  nekobeat.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: audio.rs  discord_rpc.rs  lib.rs  library.rs  main.rs  news.rs  offline.rs
src-tauri/src/aggregator/: genius.rs  mod.rs  musixmatch.rs  resolver.rs  search.rs  soundcloud.rs  spotify.rs  spotify_lyrics.rs
src-tauri/windows/: hooks.nsh
src-tauri/worker/: soundcloud-proxy.js  wrangler.toml
