[package]
name = "nekobeat"
version = "0.1.0"
description = "A Tauri App"
authors = ["Nishal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nekobeat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19.0", features = ["symphonia-all"] }
lofty = "0.23.2"
walkdir = "2.5.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3.30"
tauri-plugin-dialog = "2"
rusty_ytdl = "0.7.1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
url = "2.5"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
regex = "1.12.3"
gstreamer = "0.21"
gstreamer-audio = "0.21"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
chrono = "0.4.38"
sha1 = "0.10.6"
discord-rich-presence = "1.1.0"
tauri-plugin-global-shortcut = "2.3.1"
scraper = "0.19"
tauri-plugin-updater = "2.10.0"
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation"] }
